<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_24ssp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@color/dark"
            android:textSize="@dimen/_24ssp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:hint="@string/username"
            android:padding="@dimen/_5sdp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp" />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/teal"
            android:elevation="@dimen/_5sdp"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</RelativeLayout>