<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_24ssp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/dark"
            android:textSize="@dimen/_24ssp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:hint="@string/username"
            android:padding="@dimen/_5sdp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp" />

        <CheckBox
            android:id="@+id/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Tự động đăng nhập" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/teal"
            android:elevation="@dimen/_5sdp"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40ssp"
            android:gravity="center"
            android:text="OR" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:paddingTop="@dimen/_12sdp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/com_facebook_button_background"
                android:gravity="center"
                android:text="@string/login_fb"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/com_facebook_button_text_color" />
        </RelativeLayout>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40ssp"
            android:layout_gravity="start"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/create_account"
            android:textColor="#2B9BFD" />
    </LinearLayout>
</RelativeLayout>