<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:id="@+id/home_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="sans-serif-light"
            android:padding="5sp"
            android:text="Dành cho bạn"
            android:textSize="@dimen/_18ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/line_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/male"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/warning"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/men_fashion"
                    android:layout_margin="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="sans-serif-black"/>

                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/man" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/female"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/teal"
                app:cardBackgroundColor="@color/teal"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/women_fashion"
                    android:layout_margin="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="sans-serif-black"/>

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/women" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="sans-serif-light"
            android:padding="5sp"
            android:text="@string/update_latest"
            android:textSize="@dimen/_18ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/line_space" />

        <GridView
            android:id="@+id/gridview_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="40dp"
            android:horizontalSpacing="5dp"
            android:isScrollContainer="false"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />
    </LinearLayout>
</ScrollView>